# ChangeLog for app-text/xapian-omega
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/xapian-omega/ChangeLog,v 1.40 2014/06/14 10:59:36 blueness Exp $

  14 Jun 2014; Anthony G. Basile <blueness@gentoo.org>
  xapian-omega-1.2.17.ebuild:
  Stable ppc ppc64, bug #506974

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  xapian-omega-1.2.17.ebuild:
  x86 stable wrt bug #506974

  18 Apr 2014; Markus Meier <maekke@gentoo.org> xapian-omega-1.2.17.ebuild:
  arm stable, bug #506974

*xapian-omega-1.2.15 (31 Jan 2014)
*xapian-omega-1.2.16 (31 Jan 2014)
*xapian-omega-1.2.17 (31 Jan 2014)

  31 Jan 2014; Anthony G. Basile <blueness@gentoo.org>
  +xapian-omega-1.2.15.ebuild, +xapian-omega-1.2.16.ebuild,
  +xapian-omega-1.2.17.ebuild:
  Version bumps

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> xapian-omega-1.2.14.ebuild:
  Stable for sparc, wrt bug #470402

  03 Sep 2013; Agostino Sarubbo <ago@gentoo.org> xapian-omega-1.2.14.ebuild:
  Stable for ia64, wrt bug #470402

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> xapian-omega-1.2.14.ebuild:
  Stable for alpha, wrt bug #470402

*xapian-omega-1.3.1 (10 Aug 2013)

  10 Aug 2013; Anthony G. Basile <blueness@gentoo.org>
  +xapian-omega-1.3.1.ebuild:
  Version bump

  24 May 2013; Agostino Sarubbo <ago@gentoo.org> xapian-omega-1.2.14.ebuild:
  Stable for ppc64, wrt bug #470402

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> xapian-omega-1.2.14.ebuild:
  Stable for arm, wrt bug #470402

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> xapian-omega-1.2.14.ebuild:
  Stable for ppc, wrt bug #470402

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> xapian-omega-1.2.14.ebuild:
  Stable for x86, wrt bug #470402

  19 May 2013; Agostino Sarubbo <ago@gentoo.org> xapian-omega-1.2.14.ebuild:
  Stable for amd64, wrt bug #470402

  11 Apr 2013; Anthony G. Basile <blueness@gentoo.org>
  -xapian-omega-1.2.12.ebuild:
  Remove older stable
