@@ -11,24 +11,18 @@ EBUILD xapian-omega-1.2.13.ebuild 858 SHA256 26cad77107387d539895d21e1dab54fa4c3
 EBUILD xapian-omega-1.2.14.ebuild 875 SHA256 0e9f55331621e7204163bafeec682def3114e525235e4ecf4c0a150ebc19c2fa SHA512 22b68baf375321492b211b4498b26c8cae8440fbc441151c729b35b22dccca83a3f3b9ce7334a9b02bfce21903bfe8afd8d37d25b5dd41804e5e86a5b611f4ca WHIRLPOOL fe81bb650d1abe011f168a90b5f18227d24a3c1a4858c61e009b609900c6f830d7c7337f29923b47a67d8123a847e085025e842be51d1b8123f9927a77dcce85
 EBUILD xapian-omega-1.2.15.ebuild 888 SHA256 cd2e3df1d6a191b99bfa7f63d6d6a0b368aa03088e99858282f3be6f11d07268 SHA512 c489f227388e284b95294e589a8e1ad649f9175fa07855f493a9af157686724f2e4f95a24b9ab46b51b0bf471e44736f5f6d76283d6aa06dbfe13f973822fa98 WHIRLPOOL 739a878868377f42e533e1ae249ab0bee890c9b0cef521b2f2b1949df28d771fea039791825738be382fe33913f7ddcfbc089072a3ca5edf0454d393e0fa5100
 EBUILD xapian-omega-1.2.16.ebuild 888 SHA256 9a1d0dc5da132ba0d4d8d0a6021e40c74768eed068b0c77fea2e39285b5f8cd9 SHA512 1b8830830d67b8a07c9a0df25003b03b46029b87ab7c0fcdefdd95548dfcd7d44925ed82d57c3dc9282bf4e0f692f3316197d6cb538aabdb12d405b4a4148199 WHIRLPOOL 5861d95379103e9271d32aa5b93175e4c39cc516156e3ac8b5aa4601f1a4bef1a5ad269c07a9fcae81bbbd957a1781f72437391a266888b633635bb806ae1a11
-EBUILD xapian-omega-1.2.17.ebuild 884 SHA256 040cb436da41d234e2075fc3165eca420c2517492e669a2fa1aa816f9b87c80c SHA512 590109765923f3776c2cddaeec147a894bc67d3b0be95ec89b8a8b60c4fb853dcdc59c9b110058f9eac110e7bd06953ba9a7c9dee0d11f1dca7555fcd72057ad WHIRLPOOL 42588af75451691c595cdb861df7c00aac480cfe3f0ec974faca97dc90243fa77d4a2eb53e909ab586e705efd8b90a69aa8d150f3b0e0994e75f0e4cbacc94fb
+EBUILD xapian-omega-1.2.17.ebuild 881 SHA256 d0c65e7e5b116e630ffc65efabd5651695a498741df89e505f837ad8692a24e8 SHA512 8d0a55a199182d1151322154ee9e3567cd2486443118238e1ad0a5a5844c3164c59cdddd8b01cf6961c3d109229ad9f955a1baf6ab5865f9bbe6e6a46484d191 WHIRLPOOL 62b4f4a0c1ee018f4629d2f0745a503ffc27ceb391129744cfe485716fede5f1f6c3166ebacd2964494f254299d7c580bbbb9fb4e2570ab98acd33157c145c22
 EBUILD xapian-omega-1.3.1.ebuild 867 SHA256 bff70ea269a6b76c92736d17950565336b9ec28cebb765c303c40aec5d62c40f SHA512 7c58e677f418f8b23c7501e2c8aabe6e66e37fc8ca0178ccd6a99e647e1ddadf766f8d1fdc3bc28b051bb82e7a2816f7d49ab5cc27c9dfdb37c06420ae2b4ed1 WHIRLPOOL 15913d9992ee5a8e533c317f0f879927dde777c5d80b414c85f3db9bd3b70ea9130f8910637454c45f2473c5b44253b008592a2d9f8600fc1c35ba0904672a04
-MISC ChangeLog 5206 SHA256 e41123c68dd90e0c5ef648e38bf9f225bb9f6b54ae108795126ac5b4e32b7398 SHA512 8c9591d600c65f263b4d88d3db521bd1b5a9e53cf409d8fb48770bd985ab627dbe985c9664d6361d1324bb1dfe969deb5de746728ebfee3afce0097429b1a296 WHIRLPOOL 99d72bc627358ebca94595d62c03f25ef13339ecb2bbd400bb421d060145c1b2a5f2740115bdf92029296fe6a83e56b839a62ecdb94f6e75c503ceef5cd7c436
+MISC ChangeLog 5316 SHA256 d2bc94b379dd791961319ce20f1e3c9e23c6fa0c6750fd8bc01bcfa1a49f931b SHA512 03dd43de01f6ed06d4d1afa17e37089388a13a09a8d07e6cc231ace1144276f7d68961e269c31dceaba4586eb69c5a2cc2c94906bb7594c6c9ac15359bddb24b WHIRLPOOL 7ad51b146da2a6fea274aeeb81232ad99e3083515c6a7f405c1e23a1fd75c23395b3d9b2d4e8ad478b462d497505176aa21f66d7c888d901a6924a913b794fd5
 MISC metadata.xml 367 SHA256 e757cf120c1188c0010caaf7449e89deee52d8aa275f4f0c3b9cc0c097d28596 SHA512 e562b4dfbdcf62a3f860cd185dcd5fb2cf4067cb9b6c11c94669027c9cbae94bc437fa63e68b3b982a6bdda624087a60b24a269031fae2f3f975efb3d8e85d44 WHIRLPOOL 1314776082f07f5fdf74d15ad6b5093276b58f47e4dce35c0377e6a7baef0941bf567e43047e4ff80a726e2078d506c9029cd033cba8aeba9110b75cbbffa036
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTnCsvAAoJEJOE+m71LUu6AtgQAICDo3e/8nXr6rNsEJjzaUl+
-8l5iIN84naViNIk6q5wPXhnzMgQiTYNdFe/1f/UX/pgrXdU0bDvuD+r5JORinwDc
-nXen7QMY5RvRpzIgNGv6JsLqAxA5SDSWbPFotTt2wzCTlW7qQeVJze49ouEniXyM
-y7ODJdESURlWxidut6KKUlhp+gSJTFMFeNv1zFZW0RV23kI0a6rI0rXhYqAGPBOy
-aWldLguUMDcz1WS4ojwBVNYzSysLYGZtNrEUeqfWg6HV9hRy3zwUAt5nT4Cjw5y5
-i+XIKfKYZhDQO7Pw070QUVg6Adsc1mFyPebhlVy/0KIbpKjPErIDWqLMunfmgHrR
-pJTuV1I+CbiFJ8WiEYjUo4Vwp+w6b+CSsT9zoIw/M8QgUN0nX/2kuiNU8f0DFWBS
-LfsbnkunNIXcNHb87tsRqwEPlKXBdDffh+Z6zdJyqMWB0ahDsWcjP2TZerUJyRcM
-oDVUfAsuLi1YTXCngFVYqpTz/4h3HSGBltazP+yVdIQRP7d8Re3R1UQsrpR11g18
-tpq6bzJUKpXOnMEjsDC2gudAgqOuls1l6wDdUCqsXxPgUuEmGbnyI5LOKgUX/LJz
-BV4TcAxSbzgAzC120i9t1aZJ/4D6suvoCLg2+I+PD3CI0BBwkG1RXdjMw6jxgpUS
-VWyE/+B/jDV1R7YFmm3G
-=3Ay8
+iQEcBAEBCAAGBQJToWutAAoJEA2sAkrWKOU23TcH/RXUTgUTDcxN4PDZ8gwdNApf
+2YSR7d8YduX1DAdY/5EP0CxdkHcWBTs7NOcpHNnzLUr26ov30yFtEjobryUzu5OQ
+tA4HtKJFjxjWrMY4trREA6cggZG1YAvdeiU860nLaw7oQXLkQmzlXuc6yU31+TRq
+N96vef4xqNIw9LMJloEvDa9hTlK3lrQ+7jgBjsjTYv7MlXIn02q6+HuVu/iTiGFs
+JjrIEiE3EunUe5XnPB2learPS65rUJijx5BfcxocmuVO5ep5XjjPZ75dqrnSXJjv
+tW8WVXTmc7wzu2Qy4bMll1CKxs3zJkFviaqIuXBCGsWxu+tnLzdyDo6304HT+E0=
+=XFE2
 -----END PGP SIGNATURE-----
