@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xapian-omega/xapian-omega-1.2.17.ebuild,v 1.4 2014/06/14 10:59:36 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xapian-omega/xapian-omega-1.2.17.ebuild,v 1.5 2014/06/18 10:35:25 nimiux Exp $
 
 EAPI="5"
 
@@ -11,7 +11,7 @@ S="${WORKDIR}/xapian-omega-${PV}"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 arm ~ia64 ~mips ppc ppc64 ~sparc x86"
+KEYWORDS="~alpha amd64 arm ~ia64 ~mips ppc ppc64 ~sparc x86"
 IUSE=""
 
 DEPEND=">=dev-libs/xapian-${PV}
