@@ -11,24 +11,18 @@ EBUILD xapian-1.2.13.ebuild 1485 SHA256 4edc7d4e5c7b4207b2547faf6211e7f220cc7bfd
 EBUILD xapian-1.2.14.ebuild 1482 SHA256 4d2186d695c44d7308b5718b458e6c251fb49179bb086311fdb66803fbe74f3d SHA512 d6d54eded65023a769ba3abec5172394523756f2f9ad9ba7e3625fcc857a1600c6b2ec811b0073dbedf2de5dabd14bf8efb5ffb485bc1fb66574c3e15d5d9480 WHIRLPOOL cafa1ac6b88d619288af9d0b298a904a972438aea5060f6db9dd2abc38b822bcada93167ea160f6755871fbe370d32405c466cb070eaaca6b481446580a9c973
 EBUILD xapian-1.2.15.ebuild 1495 SHA256 9b0aca7870b9fd30dd8949a4f8eb8149f476ac8ac656511dd49b309d3eacf074 SHA512 103c11390d14e4044b1df09a10aaa5ade45a9b4b4d5b3330501cd1d1102379878ce89b34d66f72891614f88ee13f5bae48af9ab2cf12a36b5c5868fa0489124a WHIRLPOOL 741ecac13d9824c2a989bfa8550d50e9975531f84785a8cbddfb381f4dfb7b88e8edc15998bf3064b27509138b201afbb74c7620dd8037d164437c06bd604860
 EBUILD xapian-1.2.16.ebuild 1495 SHA256 48ba4ce694d0ce1e4c2b03828bd62a53570ee0d40bf088ee454ace5e41af755c SHA512 3586a528c9e6c2b661ad135953ed428e398feafcd40b53982e5752038b9c1112980d75a20137d8a939fff0258b61392e68b54428fa963dd0c21af0bd168f0bb9 WHIRLPOOL 14fe6897f49c9b8180cee3d88d8954ef990f9e7865847fea4bc937697f004b480b7c70027be75c529bb1a85f6403fc53b32d6432c3265c1c390233fe5011da0f
-EBUILD xapian-1.2.17.ebuild 1491 SHA256 8a7a0c223bd7e23c9788158adea9a774fb7785951141dce1897c69eda749f9b9 SHA512 d1f191fdd7fdd2b483c336155825c8647676ce734b8bdecfc47e3ec107da7a51ec3254f511e1adf5a1a7e19861fc6971c1cfbf79785c41c0a1bc02b97caf1165 WHIRLPOOL 4195604c610b9851976d3f93c1bd32524949e8c20f9418930f5904f57ce781a76cd553009ba5a6f900902b48769ad0856a76ba8f01a73c4d8bdae6a98e00f27b
+EBUILD xapian-1.2.17.ebuild 1488 SHA256 b71765e2e640e6013f63df8a87053c1772dfb84cbf1ebc5d828d8fd0b9a781e0 SHA512 3f0ee59edc89ffbe400106bae8fcd9b33e70bb8e36be699469b14b0d9deb6de07337dd8ecf7cc6ff6c23f5aeea662526cc3adee875e608137235aa66678898ad WHIRLPOOL 2b259186d408f05e574bbb23097ec0ea84d2f9b959fdb63b2e56a6a51ed75884ce3466e789d35685e8e246288a1903ff408d131f763fd9c17e61cd14052e38e9
 EBUILD xapian-1.3.1-r1.ebuild 1492 SHA256 2fce5c8cb326cfd33f0faff264c95ec8c4f2c4486c124f681e21a1650fa2888d SHA512 a7023244910f9396a767929e119bb5d276e42c873e21f3be0a45722830a1f00d250c9270aa56a4ccc9e4c7d487d8a8d34c20f8726475f835640aa59ef99fdef3 WHIRLPOOL 9cfafc8080742d17d67cc12cd65819c6e6cdea6dada8b275e9124768af9852cffb69cb8e164590adb088303c51e9af96558b2caff359cc65edb6097120b1bf14
-MISC ChangeLog 14967 SHA256 e5b9d3093c59b6f96ec4f2022948e5d2fc51b0770770306cdbfd103f260fb9d1 SHA512 41380edef6b3328c3e744d724d4c2ff64de539c0c4122d5d769abda85db426cd5787c624d16971957f7ffd9bf95d7d4f587b785754c11102b75ace528c6726be WHIRLPOOL 730e28d608d6acd769e74631e81c15133672e8424cacff23953965ebee56a2c20c8cfe6a8f727fb9c1c81e9550797d2f8becca0a84bfb2091e9c188de460fbfa
+MISC ChangeLog 15071 SHA256 f75775ae176a2a46e06bc8401322910b512818fc5ff177fdc6a72b4db1ab1137 SHA512 7741978f6b38121ab470931e7fa0cf8c990cc5ddf7daea1e9ac93205c258f9dd93bc49c4bfd82f126062716ce291690447bc01afb71c0d7fb00c1fe00e5dfc75 WHIRLPOOL 215ff9b8f0152566e9b8ffb627d16e8056c10030db8136753f112e26bc659088a15147be5e513c23c36f44c966dbc991ceb010c0b98b9b95c986075f4091e568
 MISC metadata.xml 986 SHA256 a8edfccb5ff34bd1f0d096bb80a8d337ad9c47880ab5165039e23219cff52c84 SHA512 ab2b46cfa58c704291db4e87428acd82987c236bdf1ac8c7c3dbcc4c1fa6a0b84cdf5ba28c317d8442e16264b4af9dbb82a14a0b4a129e0d7189168b68862690 WHIRLPOOL 8b7a20305b22c87d82e3c5ec765d9bc18c4e9a5e772920f04e827f8ddad71ac1aec50a7389c1b84662ea30afe278cacdb277af546320240a616d7e8a84b76aed
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTnCriAAoJEJOE+m71LUu69G8QAKRJ4iu8cdy4xk7e1CGbaULT
-0cy4Vut9IPZscMOCKtnrWEOZFANRvr5FTnXlQZIQRKJTI5JXP8G3jfDqe3GXIQSV
-+n8MsbSLPbiaJ/8nQZCTfKKcDj/YiwevKm2KdWVpm3H0KnfL4VaOqoDa3lT3ctI6
-U59RIfLJD7xudQDazboB+ZQJpmC/I/Hvsf3MBe5TiAxkTVTe4GleaHqcYEQOyetm
-O0XuZ+NJePTozt1d+aVCVqBg/MUVDFEK+UIQbQcT09OPVplmDJL/ri8GDnQMdM92
-bX9h62ssEIlCO/LdbsYFJPxGU/aI8FDH4zWQswjNnuvzRbh17DWrzm+v5JJc7LsH
-vXEAIszKgss7SSIDS0f4gYJaZ/2OTGs7+tJ/fYhEBz1rUq2A/AHpUClw2numoyv6
-rbtKbzzYBeo6qq2mlvCSzLmO97qd7k6G+zSs/T+F9j69YAVLilEonU53Q/XWHBHt
-f7JF5tqsSHqu1D5L/A93bTYV2fDxh3AxMIs/aFexvTCFg724Nq+Yt0xUEriH9Z9S
-rInpIyGYjZvxb757boOPjeVcv5OYF+G8HSxaJrmRJ0RS+jwAcl1lfucRgzKiYQLn
-X9WYrIPudOWMwNQqOuCEZNMS7l1ydjNjLpdFLn4eRDgXVNKt3v1XdnYgk/SuXYXF
-bZH1R/sG641orzCfFZOp
-=CfVv
+iQEcBAEBCAAGBQJToWtXAAoJEA2sAkrWKOU2X8kH/0Godnobu9+85476dHi15qdZ
+6NOn3WDoQkdu6CTXHi4lT01xtGkzebadHmGPuyyxGoso0ONE8PhjqzAYyk6NsLLf
+EvJ0Ihsbt8GBTv/SVZ9gguyo0DpvFqx12vCvSqUoCEVapgSGHruh+t3RG38ZOaMG
+HeeYe6a0czGBYklo9utEz4n+pmIxvtKYBEg1+gznIusQCUMFez5IU50dMYuZ4mt7
+azOB0OWr2JRqRi+Zdff64SCpyKNXWKGtThXSqpmq24/1npxc3SKZIC24M9eoE0oo
+IUKgGefFJ4En1p+A1XFCYglgrmYK26dpoc0EitGbjM/gWEhucFwei7FAAYoJVN4=
+=+krY
 -----END PGP SIGNATURE-----
