@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/xapian-1.2.17.ebuild,v 1.4 2014/06/14 10:58:21 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/xapian-1.2.17.ebuild,v 1.5 2014/06/18 10:33:58 nimiux Exp $
 
 EAPI="5"
 
@@ -12,7 +12,7 @@ SRC_URI="http://oligarchy.co.uk/xapian/${PV}/${MY_P}.tar.xz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 arm ~ia64 ~mips ppc ppc64 ~sparc x86"
+KEYWORDS="~alpha amd64 arm ~ia64 ~mips ppc ppc64 ~sparc x86"
 IUSE="doc static-libs -sse +sse2 +brass +chert +inmemory"
 
 DEPEND="sys-libs/zlib"
