@@ -10,23 +10,17 @@ EBUILD Search-Xapian-1.2.13.0.ebuild 885 SHA256 00fea1a482db83021b0fba4cddedf6ea
 EBUILD Search-Xapian-1.2.14.0.ebuild 907 SHA256 eb9fbd5da2ed7a1ea6f76110149108db6a39d95bcea43b7bba22e30dc7540c85 SHA512 9feb655d31eea3aeba688c658df4721d97966e0703b03e1be660589dceb541fea3ecee1bef09711588c88ea95542ba689b1438f57764d01a4cf84f2ddd9f227b WHIRLPOOL adb9c115fc66dae89bb906dc5176e383fc02d9782421b4d38ba05cff73f7839e7332ab273d68f9aa37f110376df8df95b0ca73d60e7d9318dcd985f93fdfe457
 EBUILD Search-Xapian-1.2.15.0.ebuild 898 SHA256 a5b3935dbce573848745d3fe9c4d593b274e496870a1b129f78dd71dbddc3016 SHA512 7999164c291f1dbb364f748a3e85961ae06a4a38da54f34d4843f7745cff820fc901af289703e986b93b00ec48e688859e246aa9b8339626b7c6a15e157501d0 WHIRLPOOL 433f37918b927675fa1975a334e5be6755ead7fcbc7ab77a334fd19668f0f6a1dad0408836308f17df4250f44d9b2a9d7576e4e12251f497c52e64eb20b1bcf0
 EBUILD Search-Xapian-1.2.16.0.ebuild 899 SHA256 9c174453bebfaea7d02fe6fde9ea739ca3d6f96bd36c322ec2aed6659f89afb8 SHA512 e469649ab28188bd12fab4df78edc6f98984423d2a0e7ac6bee7a675e06dc5d0f965b7c4cdcc157eb5ae50006fd4bbc0e820cd3693f8c962bde4e3c5a03151f0 WHIRLPOOL 2fa75817413fb67258127efedb197328f79a7cdbeff41fe84e6287183c6fd1acc747d6a5415ec05269f54111b2b773c338ad6d439f692d7c66de3d531a86146a
-EBUILD Search-Xapian-1.2.17.0.ebuild 895 SHA256 7d548c5f50bb0ab4ddbeb5044ce9c2b12f20926f5542a60880104cc61fb09cf8 SHA512 69e39581ce6a1348678b756bf5da64dc03c2e9eb0a2fa518d2f7f25af6a6bbba7c926159d607db14efff4573ecc3d101091e3028ff01680f67b6df1016bcad55 WHIRLPOOL 194942e919b0656bbd5181136040510e7bb2ce76b51626ced2b061ddbb082b2285f96cfa819674d89bc26fe398c83f3d81dab5e2e5bac4915dd0db65b8f01e99
-MISC ChangeLog 5603 SHA256 033029818ace2a65c56a648d12b2d9eacc53060426c90e5edd59c9dcbb534ab2 SHA512 fcff3fbf2839f3147f904a52910134f4ff75c54a3265d42c463fcc3b31e1630a38f716a12963a678e6e48222c63d8a6b359163bba54bb5d5855baa63cb51f963 WHIRLPOOL c9c794ee15e5f9bd10199f33aac75c357f7816d71e10020958ef3a931fc44192d756e99796fa94feabf4b4a8066722f2a2db877ee76f0e33178797ccd273885a
+EBUILD Search-Xapian-1.2.17.0.ebuild 892 SHA256 f4297bbf941bf4f169f3585f600d48cdd372729e7ace89893830e9e49e352879 SHA512 e890983560eba0560cd8ad0d005bf20f592553682f9aab9926501ebc062d9a2c1d5c44bb1eda850f67463866f00478b73087076f2bafe4e91fdf86bafd83edb9 WHIRLPOOL 62bc1eb19886e122d7ad99596eb8db6e42b522a094acc7e8442a3dc426efc4922d49d93808457a5e5fecb36d778b0ba9702f7105fc6b3475e7274a572550b289
+MISC ChangeLog 5716 SHA256 c85b2e8e6dcc15ad276e7243cb67ca889e925af3b882a0e226ec37028fe44dca SHA512 a295e7045d5e7e21f1d4a0b173959b6bbfab3a7694b1d6b1fc6fdcc81aeb226672d5e9e8fcb7543af45fd7278218f5eb1fb308dc0f049e91317909199f8ddd08 WHIRLPOOL 896972844414abcc456b4dcec80926f70409933d3333450ebdccb3355d441cc699f0d0e3ab6d87361f187c2c1defd6a21655fc5db94a7f091663a9dce4dc7e01
 MISC metadata.xml 4044 SHA256 1728bb683fd43e3cb259952505a235fb869c4c313a1e11f840ef8a36ac708b28 SHA512 9c303e07e8401a5838fc6c8db2b367c10a9b6a55a29cfeb8bc0d82ecddcf511a5fa8845b59737f6a2e8a43a3fcf1c31a31c6ae257997077ccdd1c8798400e508 WHIRLPOOL d07e56a16b8a93d197362d94c4a7dc786414b7769bb7472aac4dc5bc77727416e603ecd4d5799476532cae12fd42c9cea3d8ae98d62966c1757046c2940bde4c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTnCtwAAoJEJOE+m71LUu66h4P/0eg6yr/C5nb9efNiuWjAlyi
-wqsDwhuHHVEsgSo20GWpvbRH+txAl77LxEufljfypCV6l49s3lPBDz43f3TkQj3B
-o0Pl2faYFBtlnbxnGn+mv73/ah/mpFl0q6u1ueRAOoLcm9R+MjqtlRadpOktzEBq
-SqX1xa93KJfUsSA09tdCO/9CMbQoT86Kb6onFcwQJQsFLa4tvj9OK7vMnX+FGMX0
-KK77Jxb3YAUfU9AfQ7BVLFdHUwDWHGalxcybCbf4jCQ0fo5ssazffd1sNlsqO3fx
-iaAXhXBdjeX4+o01bcCsXPH5be8U+CHENmWGDh+HQcn6wjtDbDj5FPker4laD1S5
-pDmOGQn4r0uYjbXb+aTqplrBxhX/tkZEnaI/39x0wjSDKK3E+uKtoxWi8OHstraw
-SahwvfHJlYc4bZ6/bFqbzTcT6qf/eVwH6HsietsrD6GdDTbDKgEnRRNmm266IviR
-KdPp/m91bT2z8W05lYscGOffNnbq9+cFyWBV2n+IQKY4+P4FhjACjKquwv2fqsC6
-iRi69v1E7u4jHf8RRjcAzgGIVJOCSL4LMtJ33qp/aeqEMS2QK37cJE7ne+HPwKmz
-EWRy9/+4KlVI5GTpl5LNj1pPJJhVFmpexKqcxXiqPCYEJD7lcvzde+3pFdae0hyh
-OYcA69WSmyneWySyC++T
-=mAaa
+iQEcBAEBCAAGBQJToWuFAAoJEA2sAkrWKOU2gHQH/Rhi7ODpIfA0PewHqsuRkEMw
+8XcZdFY3NUFu9Jhr/J0ly7jW9zR24ViV5/CdpPBh7K6ZXcZjKsrP0+Zk7ucqlG02
+qkbQkZ6TgQThxtM8sAymmUmbekKB38y1eLWvnCeInuVS9CzNc96tbiyIITSukLpW
+W5TM9Rg6v77IGBnwuepNNE6Djesy5YgQG1oCOBCDXm6t5Se3BHitoZPsw+KzA6DQ
+U4h0LyvGapL2gUqZOI0hQD2WbS9TUCABN3gCzVwjSCrqTx1BkD3/tIBTxszAjIDh
+BZIGR6iBWqDmgWvQYboYAcfcCrrsaa6ZVxMi6qql3roz/K3ua6OuAvrB+tI5g0c=
+=Cwrh
 -----END PGP SIGNATURE-----
