@@ -3,9 +3,9 @@ DEPEND=>=dev-libs/xapian-1.2.17 dev-lang/perl dev-libs/libpcre sys-libs/zlib
 DESCRIPTION=An application built on Xapian, consisting of indexers and a CGI search frontend
 EAPI=5
 HOMEPAGE=http://www.xapian.org/
-KEYWORDS=~alpha ~amd64 arm ~ia64 ~mips ppc ppc64 ~sparc x86
+KEYWORDS=~alpha amd64 arm ~ia64 ~mips ppc ppc64 ~sparc x86
 LICENSE=GPL-2
 RDEPEND=>=dev-libs/xapian-1.2.17 dev-lang/perl dev-libs/libpcre sys-libs/zlib
 SLOT=0
 SRC_URI=http://www.oligarchy.co.uk/xapian/1.2.17/xapian-omega-1.2.17.tar.xz
-_md5_=7171d7f774b81438cc7d427a41c6d485
+_md5_=42ff4a1528bdea1af381629bc310b176
