@@ -4,9 +4,9 @@ DESCRIPTION=Xapian Probabilistic Information Retrieval library
 EAPI=5
 HOMEPAGE=http://www.xapian.org/
 IUSE=doc static-libs -sse +sse2 +brass +chert +inmemory
-KEYWORDS=~alpha ~amd64 arm ~ia64 ~mips ppc ppc64 ~sparc x86
+KEYWORDS=~alpha amd64 arm ~ia64 ~mips ppc ppc64 ~sparc x86
 LICENSE=GPL-2
 RDEPEND=sys-libs/zlib
 SLOT=0
 SRC_URI=http://oligarchy.co.uk/xapian/1.2.17/xapian-core-1.2.17.tar.xz
-_md5_=80dfa317c053452696f8e38cdaf1e113
+_md5_=92eea3d1147173441b57829ee1b84f42
