@@ -4,10 +4,10 @@ DESCRIPTION=Perl XS frontend to the Xapian C++ search library.
 EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/Search-Xapian/
 IUSE=examples
-KEYWORDS=~amd64 arm ~mips ppc ppc64 x86
+KEYWORDS=amd64 arm ~mips ppc ppc64 x86
 LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
 RDEPEND=~dev-libs/xapian-1.2.17 !dev-libs/xapian-bindings[perl] dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/O/OL/OLLY/Search-Xapian-1.2.17.0.tar.gz http://oligarchy.co.uk/xapian/1.2.17/Search-Xapian-1.2.17.0.tar.gz
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	unpacker	4495f6885ab72b2cc94467e9a89fa641	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=286824a60fa880495cf8e5da0ba82516
+_md5_=41c7531a220457925e89ae403d9417cd
