@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/xapian
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/ChangeLog,v 1.116 2014/06/14 10:58:21 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/ChangeLog,v 1.117 2014/06/18 10:33:58 nimiux Exp $
+
+  18 Jun 2014; Chema Alonso <nimiux@gentoo.org> xapian-1.2.17.ebuild:
+  Stable for amd64 wrt bug #506974
 
   14 Jun 2014; Anthony G. Basile <blueness@gentoo.org> xapian-1.2.17.ebuild:
   Stable ppc ppc64, bug #506974
