@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Search-Xapian
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Search-Xapian/ChangeLog,v 1.42 2014/06/14 11:00:44 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Search-Xapian/ChangeLog,v 1.43 2014/06/18 10:34:44 nimiux Exp $
+
+  18 Jun 2014; Chema Alonso <nimiux@gentoo.org> Search-Xapian-1.2.17.0.ebuild:
+  Stable for amd64 wrt bug #506974
 
   14 Jun 2014; Anthony G. Basile <blueness@gentoo.org>
   Search-Xapian-1.2.17.0.ebuild:
