@@ -1,6 +1,9 @@
 # ChangeLog for app-text/xapian-omega
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xapian-omega/ChangeLog,v 1.40 2014/06/14 10:59:36 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xapian-omega/ChangeLog,v 1.41 2014/06/18 10:35:25 nimiux Exp $
+
+  18 Jun 2014; Chema Alonso <nimiux@gentoo.org> xapian-omega-1.2.17.ebuild:
+  Stable for amd64 wrt bug #506974
 
   14 Jun 2014; Anthony G. Basile <blueness@gentoo.org>
   xapian-omega-1.2.17.ebuild:
